tdarr-server-longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr
  namespace: tdarr
spec:
  rules:
    - host: tdarr.h
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
